package edu.fiuba.algo3.modelo.ordenesArresto;

import edu.fiuba.algo3.modelo.Policia;

public interface EstadoOrdenArresto {

    public void arrestar(Policia policia);
}
